# virtual_robot_ros

./: .gitignore  CMakeLists.txt  package.xml  pyproject.toml  requirements.txt  rosinstall  setup.py
data/urdf/: baxter.urdf  pr2.urdf
euslisp/: pr2-ik.l
launch/: baxter_display.launch  baxter_render.launch  display.launch  mocap_virtual.launch  render.launch  virtual_teaching.launch
node_scripts/: robot_render_node.py  utils.py
rviz/: baxter.rviz  baxter_urdf.rviz  mocap_virtual.rviz  pr2.rviz  urdf.rviz  virtual_teaching.rviz
scripts/: rosbag_virtual_robot.py
src/virtual_robot_ros/: utils.py
test/: test.launch
