<?xml version="1.0"?>
<package format="2">
  <name>virtual_robot_ros</name>
  <version>0.0.4</version>
  <description>Rendering Virtual Robot on ROS</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <author email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>.
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eus_imitation_msgs</exec_depend>
  <exec_depend>eus_imitation_utils</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>fetch_description</exec_depend>

  <export>
      <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
